# nucliadb

./: Cargo.toml
.github/workflows/: nucliadb.yml  nucliadb_node.yml
charts/nucliadb_node/templates/: node.cm.yaml
nucliadb/: Makefile
nucliadb/nucliadb/: run.py
nucliadb/nucliadb/ingest/: curator.py  purge.py
nucliadb/nucliadb/migrations/: kb_model_metadata_2.py
nucliadb/nucliadb/standalone/: api_router.py  app.py  config.py  utils.py
nucliadb_dataset/nucliadb_dataset/tests/: fixtures.py
nucliadb_models/nucliadb_models/: search.py
nucliadb_node/src/services/: reader.rs
nucliadb_paragraphs/src/: reader.rs
nucliadb_relations/: Cargo.toml
nucliadb_relations/src/: bfs_engine.rs  errors.rs  graph_db.rs  index.rs  lib.rs  node_dictionary.rs  relations_io.rs
nucliadb_relations/src/service/: reader.rs  writer.rs
nucliadb_sdk/nucliadb_sdk/v2/: docstrings.py  sdk.py
nucliadb_services/: Cargo.toml
nucliadb_services/src/relations/: mod.rs
nucliadb_services/src/vectors/: mod.rs
nucliadb_std/: Cargo.toml
nucliadb_std/src/: lib.rs
nucliadb_std/src/index_interface/: mod.rs
nucliadb_std/src/protos/: mod.rs
nucliadb_std/src/tantivy/: mod.rs
nucliadb_std/src/thread/: mod.rs
nucliadb_utils/nucliadb_utils/: indexing.py  transaction.py
nucliadb_utils/nucliadb_utils/fastapi/: run.py
nucliadb_utils/nucliadb_utils/storages/: gcs.py
nucliadb_utils/nucliadb_utils/tests/: gcs.py
nucliadb_vectors/: Cargo.toml
nucliadb_vectors/src/data_point/: ops_hnsw.rs
proposals/records/: 005-sharding.md  4-new-version-node.md
(+51 files in other folders)
