[package]
name = "nucliadb_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
rayon = "1.5.1"
tantivy = "0.17.0"
prost-types = "0.10"
thiserror = "1.0.31"
bincode = "1.3.3"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
nucliadb_protos = { path = "../nucliadb_protos/rust" }